# PseudoTex

./: .gitignore  Cargo.toml  README.md  basic_assign  basic_event  basic_function  complex_function  example.tex  example_protocol.pseudo  if_complex_example  if_else_complex_example  pseudotex  small_example.pseudo  small_example.tex  test_script.sh
src/: main.rs  parser.lalrpop
src/cli/: config.yml
src/examples/: basic_event  basic_function  complex_function  crash_example  fair_loss  foreach_example  if_complex_example  if_else_complex_example  if_else_example  if_elseif_else_example  if_elseif_example  if_example  init_example  init_with_args_example  procedure_example  state  state_example  symbols  symbols_example  timer_example  trigger_example
src/latex/: mod.rs
src/my_parser/: mod.rs
src/values/: mod.rs
