[package]
name = "pseudotex"
version = "1.0.2"
authors = ["Bruno Anjos <bruno.vale.anjos@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Pseudocode transpiler for its LaTeX representation."
keywords = ["pseudocode", "latex", "transpiler", "compiler", "pseudo"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/bruno-anjos/PseudoTex"
homepage = "https://github.com/bruno-anjos/PseudoTex"
documentation = "https://docs.rs/pseudotex"
readme = "README.md"
exclude = [
	"example.pdf",
	"example.tex",
	"example_protocol.pseudo",
	"PseudoCodeNotes.pdf",
	"algorithm2e.pdf"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
regex = "0.2.1"
clap = {version = "~2.33", features = ["yaml"]}

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }